--- a/swift-cloud-tutorial/cloud-cat/README
+++ b/swift-cloud-tutorial/cloud-cat/README
@@ -5,13 +5,13 @@ swift cat.swift
 You can select the site where you run the program by editing the swift.conf file:
 
 # To run on just your local machine
-sites=local
+sites: local
 
 # To run on a static cloud setup, for the tutorial
-sites=cloud-static
+sites: cloud-static
 
 # To run with dynamic coasters
-sites=aws
+sites: aws
 
 
 Download and setup the sample dataset from gutenberg.org :
